Telas de listagem + paths atualizados

--- a/appteste/templates/appteste/login.html
+++ b/appteste/templates/appteste/login.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="logo.png" class="rounded float-start" alt="LuCasa Incorporadora Logo">
+        <img src="..\appteste\imagens\logo.png" class="rounded float-start" alt="LuCasa Incorporadora Logo">
     </div>
     <div class="login-container">
         
@@ -63,11 +63,11 @@
         <form>
             <div class="form-group">
                 <label for="usuario">Usuário</label>
-                <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário">
+                <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário", required="true">
             </div>
             <div class="form-group">
                 <label for="senha">Senha</label>
-                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
+                <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required="true">
             </div>
             <button type="submit" class="btn btn-login">Entrar</button>
             <a href="#" class="forgot-password">Esqueci a senha</a>
