--- a/appteste/templates/appteste/listaEmpreendimento.html
+++ b/appteste/templates/appteste/listaEmpreendimento.html
@@ -1,39 +1,9 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends "appteste/cabecalho.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Empreendimentos - LuCasa Incorporadora</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+{% block content%}
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">LuCASA Incorporadora</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Empreendimentos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Financeiro</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Relatórios</a>
-                    </li>
-                </ul>
-            </div>
-            <button class="btn btn-outline-light" type="button">R</button>
-        </div>
+    
     </nav>
 
     <div class="container mt-5">
@@ -61,12 +31,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>...</td>
-                    <td>SANTA CRUZ DO SUL</td>
-                    <td>RS</td>
-                    <td>R$ 123.550.215,08</td>
-                    <td>Em andamento</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                     <td>
                         <button class="btn btn-warning btn-sm">
                             <i class="bi bi-pencil"></i>
@@ -76,7 +46,6 @@
                         </button>
                     </td>
                 </tr>
-                <!-- Mais linhas de empreendimentos podem ser adicionadas aqui -->
             </tbody>
         </table>
 
@@ -90,8 +59,7 @@
             </nav>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+{%endblock%}
 </body>
 
 </html>
