--- a/appteste/templates/appteste/listaUsuario.html
+++ b/appteste/templates/appteste/listaUsuario.html
@@ -1,45 +1,15 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends "appteste/cabecalho.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Usuários - LuCasa Incorporadora</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+{% block content%}
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">LuCASA Incorporadora</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Empreendimentos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Financeiro</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Relatórios</a>
-                    </li>
-                </ul>
-            </div>
-            <button class="btn btn-outline-light" type="button">R</button>
-        </div>
+    
     </nav>
 
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Lista de Usuários</h2>
-            <button class="btn btn-success">Novo Usuário</button>
+            <button class="btn btn-success" >Novo Usuário</button>
         </div>
 
         <table class="table table-bordered table-hover">
@@ -79,7 +49,7 @@
             </nav>
         </div>
     </div>
-
+{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
