--- a/appteste/templates/appteste/login.html
+++ b/appteste/templates/appteste/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login - LuCasa Incorporadora</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             background-color: #28A394;
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <div class="logo">
+    <div class="logo"  style="text-align: center;">
         <img src="..\appteste\imagens\logo.png" class="rounded float-start" alt="LuCasa Incorporadora Logo">
     </div>
     <div class="login-container">
@@ -65,10 +65,12 @@
                 <label for="usuario">Usuário</label>
                 <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário", required="true">
             </div>
+            
             <div class="form-group">
                 <label for="senha">Senha</label>
                 <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required="true">
             </div>
+            <br>
             <button type="submit" class="btn btn-login">Entrar</button>
             <a href="#" class="forgot-password">Esqueci a senha</a>
         </form>
