CRUD usuario funcionando + criptografia de senha

--- a/appteste/templates/appteste/listaUsuario.html
+++ b/appteste/templates/appteste/listaUsuario.html
@@ -3,43 +3,46 @@
 {% block content%}
 
 <body>
-    
-    </nav>
-
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Lista de Usuários</h2>
-            <button class="btn btn-success" >Novo Usuário</button>
+            <button class="btn btn-success"><a style="text-decoration: none; color: black;" href="../cadUsuario/">Novo
+                    Usuário</a></button>
         </div>
 
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover table-striped" id="usuarios">
             <thead class="table-dark">
                 <tr>
                     <th>Nome</th>
-                    <th>Email</th>
-                    <th>Usuário</th>
-                    <th>Editar / Remover</th>
+                    <th>Login</th>
+                    <th>Grupo</th>
+                    <th style="width: 200px">Editar / Remover</th>
                 </tr>
             </thead>
             <tbody>
+                {% for obj in obj %}
                 <tr>
-                    <td>Renan Sartori</td>
-                    <td>atendimento@lucasaconstrutora.com.br</td>
-                    <td>rsartori</td>
-                    <td>
+                    <td>{{obj.Nome}}</td>
+                    <td>{{obj.Login}}</td>
+                    <td>{{obj.Categoria_Usuario.Descricao}}</td>
+
+                    <td style="text-align: center;">
                         <button class="btn btn-warning btn-sm">
-                            <i class="bi bi-pencil"></i>
+                            <i class="bi bi-pencil"><strong>Editar</strong></i>
                         </button>
                         <button class="btn btn-danger btn-sm">
-                            <i class="bi bi-trash"></i>
+                            <a href="{% url 'delete' obj.id %}" style="text-decoration: none; color: white;">
+                                <i class="bi bi-pencil"><strong>Remover</strong></i>
+                            </a>
+
                         </button>
                     </td>
                 </tr>
-                <!-- Mais linhas de usuários podem ser adicionadas aqui -->
+                {% endfor %}
             </tbody>
         </table>
 
-        <div class="d-flex justify-content-center">
+        <!--<div class="d-flex justify-content-center">
             <nav aria-label="Navegação de página">
                 <ul class="pagination">
                     <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -47,10 +50,25 @@
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
                 </ul>
             </nav>
-        </div>
+        </div>-->
     </div>
-{% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 
-</html>
+    <script>
+        /*document.addEventListener("DOMContentLoaded", function () {
+            fetch('listarUsuarios/')
+                .then(response => response.json())
+                .then(data => {
+                    let table = document.getElementById("usuarios");
+
+                    data.forEach(function (usuario) {
+                        let td = document.createElement("td");
+                        td.textContent = usuario.id;
+                        option.text = categoria.Descricao;
+                        select.add(option);
+                    });
+                })
+                .catch(error => console.error('Erro ao carregar usuarios:', error));
+        });*/
+    </script>
+    {% endblock %}
+</body>
