--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Usuários - LuCasa Incorporadora</title>
+    <title>LuCasa Incorporadora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -26,6 +26,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../cadUsuario/"><strong>Usuários</strong></a>
+                    </li>
+                    <li class="nav-item"></li>
+                        <a class="nav-link" href="../mostrarUsuarios/"><strong>Lista Usuarios</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><strong>Relatórios</strong></a>
