Alterações visuais tabelas e cabeçalho

--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #69e4b5;" > 
+    <nav class="navbar navbar-expand-lg" style="background-color: #1e6054;" > 
         <div class="container-fluid">
             <!--<a class="navbar-brand" href="#" style="display:flex; justify-content: start;">LuCasa Incorporadora</a>-->
             <img src="../appteste/imagens/logo.jpg" alt="Logo" width="30" height="25" class="d-inline-block align-text-top">
@@ -19,16 +19,16 @@
             <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
                 <ul class="navbar-nav" >
                     <li class="nav-item">
-                        <a class="nav-link" href="/"><strong>Início</strong></a>
+                        <a class="nav-link" href="/"><strong style="color: #ffffff">Início</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../listaEmpreendimento/"><strong>Empreendimentos</strong></a>
+                        <a class="nav-link" href="../listaEmpreendimento/"><strong style="color: #ffffff">Empreendimentos</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../cadUsuario/"><strong>Usuários</strong></a>
+                        <a class="nav-link" href="../cadUsuario/"><strong style="color: #ffffff">Usuários</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>Relatórios</strong></a>
+                        <a class="nav-link" href="#"><strong style="color: #ffffff">Relatórios</strong></a>
                     </li>
                 </ul>
             </div>
