--- a/appteste/templates/appteste/listaEmpreendimento.html
+++ b/appteste/templates/appteste/listaEmpreendimento.html
@@ -18,15 +18,15 @@
         </div>
 
         <table class="table table-bordered table-hover">
-            <thead class="table-dark">
+            <thead>
                 <tr>
-                    <th>Código</th>
-                    <th>Nome</th>
-                    <th>Cidade</th>
-                    <th>UF</th>
-                    <th>Custo (R$)</th>
-                    <th>Status</th>
-                    <th>Editar/Remover</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Código</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Nome</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Cidade</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">UF</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Custo (R$)</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Status</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Editar/Remover</th>
                 </tr>
             </thead>
             <tbody>
