--- a/appteste/templates/appteste/listaUsuario.html
+++ b/appteste/templates/appteste/listaUsuario.html
@@ -15,10 +15,10 @@
         <table class="table table-bordered table-hover">
             <thead class="table-dark">
                 <tr>
-                    <th>Nome</th>
-                    <th>Email</th>
-                    <th>Usuário</th>
-                    <th>Editar / Remover</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Nome</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Email</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Usuário</th>
+                    <th style="background-color: #1ba29e; color: #ffffff">Editar / Remover</th>
                 </tr>
             </thead>
             <tbody>
