--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -7,7 +7,9 @@
     <title>LuCasa Incorporadora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
+<style>
+    
+</style>
 <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #1e6054;" > 
         <div class="container-fluid">
@@ -28,7 +30,7 @@
                         <a class="nav-link" href="../cadUsuario/"><strong style="color: #ffffff">Usuários</strong></a>
                     </li>
                     <li class="nav-item"></li>
-                        <a class="nav-link" href="../mostrarUsuarios/"><strong>Lista Usuarios</strong></a>
+                        <a class="nav-link" href="../mostrarUsuarios/"><strong style="color: #ffffff">Lista Usuarios</strong></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><strong style="color: #ffffff">Relatórios</strong></a>
