--- a/appteste/templates/appteste/login.html
+++ b/appteste/templates/appteste/login.html
@@ -60,9 +60,10 @@
     <div class="login-container">
         
         <h1>Login</h1>
-        <form>
+        <form action="../fazLogin/" method="POST">
+            {% csrf_token %}
             <div class="form-group">
-                <label for="usuario">Usuário</label>
+                <label for="login">Usuário</label>
                 <input type="text" class="form-control" id="usuario" placeholder="Digite seu usuário", required="true">
             </div>
             
