--- a/appteste/templates/appteste/login.html
+++ b/appteste/templates/appteste/login.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="logo"  style="text-align: center;">
-        <img src="..\appteste\imagens\logo.png" class="rounded float-start" alt="LuCasa Incorporadora Logo">
+        <img src="../appteste/imagens/logo.png" class="rounded float-start" alt="LuCasa Incorporadora Logo">
     </div>
     <div class="login-container">
         
