--- a/appteste/templates/appteste/home.html
+++ b/appteste/templates/appteste/home.html
@@ -4,7 +4,7 @@
 
 <head>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'tinymce/css/prism.css' %}">
+    <link rel="stylesheet" href="{% static '\imagens\Logo_Lucasa_Incoporadora.png' %}">
 </head>
 
 <body>
