--- a/appteste/templates/appteste/manutencaoUsuario.html
+++ b/appteste/templates/appteste/manutencaoUsuario.html
@@ -43,27 +43,30 @@
 <body>
     <div class="form-container">
         <h2 style="text-align: center;">CADASTRO DE USUÁRIO</h2>
-        <form method="POST" id="usuario">
+        <form method="POST" id="usuario" action="{% url 'salvaUsuario' %}">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="nome" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="nome" placeholder="Nome" required="True">
+                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" required="True">
             </div>
             <div class="mb-3">
                 <label for="categoria">Categoria</label>
                 <select class="form-select form-select-md" aria-label="Small select example"
                     style="background-color: rgb(255, 255, 255); color: black; border-radius: 50px;" id="categoria"
-                    required="True">
+                    required="True" name="categoria">
                     <option value=""></option>
+                    {% for o in obj %}
+                    <option value="{{ o.id }}">{{ o.Descricao }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="mb-3">
                 <label for="login" class="form-label">Usuário</label>
-                <input type="text" class="form-control" id="login" placeholder="Usuário" required="True">
+                <input type="text" class="form-control" id="login" placeholder="Usuário" required="True" name="login">
             </div>
             <div class="mb-3">
                 <label for="senha" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="senha" placeholder="Senha" required="True">
+                <input type="password" class="form-control" id="senha" placeholder="Senha" required="True" name="senha">
             </div>
             <div class="mb-3"></div>
             <div style="text-align: center;">
@@ -71,53 +74,13 @@
             </div>
             <!--<label for="senha" class="form-label">Senha</label>
             <input type="password" class="form-control" id="senha" placeholder="Senha" required="True">-->
-    </div>
-    </form>
+        </form>
     </div>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            fetch('categorias/')
-                .then(response => response.json())
-                .then(data => {
-                    let select = document.getElementById("categoria");
 
-                    data.forEach(function (categoria) {
-                        let option = document.createElement("option");
-                        option.value = categoria.id;
-                        option.text = categoria.Descricao;
-                        select.add(option);
-                    });
-                })
-                .catch(error => console.error('Erro ao carregar categorias:', error));
-        });
-
-
-        document.getElementById("usuario").addEventListener('submit', function (event) {
-            event.preventDefault()
-
-            const dados = {
-                nome: document.getElementById('nome').value,
-                categoria: document.getElementById('categoria').value,
-                login: document.getElementById('login').value,
-                senha: document.getElementById('senha').value
-            };
-
-
-            fetch('/appteste/salvaUsuario/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': '{{ csrf_token }}'
-                },
-                body: JSON.stringify(dados)
-            })
-                .then(response => response.text())
-                .catch(error => console.error('Erro ao criar usuario:', error));
-        });
     </script>
     {%endblock%}
 
 </body>
 
-</html>
