--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -2,40 +2,39 @@
 <html lang="pt-BR">
 
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuCasa Incorporadora</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/cabecalho.css' %}" rel="stylesheet">
 </head>
-<style>
-    
-</style>
 
-{% load static %}
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #1e6054;" > 
+    <nav class="navbar navbar-expand-lg"> 
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="display:flex; justify-content: start;">
-            <img src="{% static 'imagens/LogoLucasa.png' %}" alt="Logo" width="30" height="25" class="d-inline-block align-text-top"></a>
+            <a href="{% url 'home' %}" class="Logo">
+                <img src="{% static 'imagens/LogoLucasa.png' %}" alt="Logo" class="logo-img d-inline-block align-text-top">
+            </a>                        
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
-                <ul class="navbar-nav" >
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/"><strong style="color: #ffffff">Início</strong></a>
+                        <a class="nav-link" href="/"><strong>Início</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../listaEmpreendimento/"><strong style="color: #ffffff">Empreendimentos</strong></a>
+                        <a class="nav-link" href="../listaEmpreendimento/"><strong>Empreendimentos</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../cadUsuario/"><strong style="color: #ffffff">Usuários</strong></a>
-                    </li>
-                    <li class="nav-item"></li>
-                        <a class="nav-link" href="../mostrarUsuarios/"><strong style="color: #ffffff">Lista Usuarios</strong></a>
+                        <a class="nav-link" href="../cadUsuario/"><strong>Usuários</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong style="color: #ffffff">Relatórios</strong></a>
+                        <a class="nav-link" href="../mostrarUsuarios/"><strong>Lista Usuarios</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><strong>Relatórios</strong></a>
                     </li>
                 </ul>
             </div>
@@ -43,8 +42,8 @@
     </nav>
 
     {% block content %}
-
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+</html>
