--- a/appteste/templates/appteste/listaUsuario.html
+++ b/appteste/templates/appteste/listaUsuario.html
@@ -2,21 +2,28 @@
 
 {% block content%}
 
+<head>
+
+    {% load static%}
+    <link href="{% static 'css/listas.css' %}" rel="stylesheet">
+
+</head>
+
 <body>
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Lista de Usuários</h2>
-            <button class="btn btn-success"><a style="text-decoration: none; color: black;" href="../cadUsuario/">Novo
+            <button class="btn btn-success"><a href="../cadUsuario/">Novo
                     Usuário</a></button>
         </div>
 
-        <table class="table table-bordered table-hover table-striped" id="usuarios">
+        <table class="table table-bordered table-hover table-striped table-responsive" id="usuarios">
             <thead class="table-dark">
                 <tr>
-                    <th style="background-color: #1ba29e; color: #ffffff">Nome</th>
-                    <th style="background-color: #1ba29e; color: #ffffff">Login</th>
-                    <th style="background-color: #1ba29e; color: #ffffff">Grupo</th>
-                    <th style="width: 200px" style="background-color: #1ba29e; color: #ffffff">Editar / Remover</th>
+                    <th style="background-color: #28A394;">Nome</th>
+                    <th style="background-color: #28A394;">Login</th>
+                    <th style="background-color: #28A394;">Grupo</th>
+                    <th style="background-color: #28A394; width: 15%;">Editar / Remover</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,12 +35,12 @@
 
                     <td style="text-align: center;">
                         <button class="btn btn-warning btn-sm">
-                            <a href="{% url 'updateUsuario' obj.id %}" style="text-decoration: none; color: rgb(0, 0, 0);">
+                            <a class="btn-editar" href="{% url 'updateUsuario' obj.id %}" style="text-decoration: none; color: rgb(0, 0, 0);">
                                 <i class="bi bi-pencil"><strong>Editar</strong></i>
                             </a>
                         </button>
                         <button type="" class="btn btn-danger btn-sm">
-                            <a href="{% url 'deleteUsuario' obj.id %}" style="text-decoration: none; color: white;">
+                            <a class="btn-remov" href="{% url 'deleteUsuario' obj.id %}" style="text-decoration: none; color: white;">
                                 <i class="bi bi-pencil"><strong>Remover</strong></i>
                             </a>
 
