--- a/appteste/templates/appteste/listaEmpreendimento.html
+++ b/appteste/templates/appteste/listaEmpreendimento.html
@@ -47,10 +47,10 @@
                     <td></td>
                     <td>
                         <button class="btn btn-warning btn-sm">
-                            <i class="bi bi-pencil"></i>
+                            <i class="bi bi-pencil"><strong>Editar</strong></i>
                         </button>
                         <button class="btn btn-danger btn-sm">
-                            <i class="bi bi-trash"></i>
+                            <i class="bi bi-trash"><strong>Remover</strong></i>
                         </button>
                     </td>
                 </tr>
